fix sonar - part 2